--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div onlogin="loginCallback();" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
 
         
-        <script src="envkey.js"></script>
+        <script src="env/envkey.js"></script>
         <script>
             window.fbAsyncInit = function() {
                 FB.init({
