--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
                         auth = e.authResponse;
 
                     console.log(auth.accessToken, auth.expiresIn, auth.userID);
+
+                    apiCallback();
+
                 } 
             }
 
+            function apiCallback(){
+                /* get profile */
+                FB.api('/me', function(e){
+                    console.log('/me', e);
+                });
 
+            }
 
             
         </script>
